packages/kit/test/apps/basics/src/routes/errors/page-endpoint/_shared.js
export class FancyError extends Error {
	name = 'FancyError';
	fancy = true;

	/**
	 * @param {string} message
	 */
	constructor(message) {
		super(message);
	}
}
